--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             srcset="">
         <p class="lead">Eu sou Isabella</p>
         <h1>Sou uma estudante do CELC</h1>
-        <p>Me chamop Isabella, sou apaixonada por maquiagem, consigo fazer qualquer maquiagem desde a mais complicadas até as mais diferentes, além de maquiar também aprendi muitos projetos nas aulas de programação do colégio usando HTML, CSS e JavaScript. Veja os projetos
+        <p>Me chamo Isabella, sou apaixonada por maquiagem, consigo fazer qualquer maquiagem desde a mais complicadas até as mais diferentes, além de maquiar também aprendi muitos projetos nas aulas de programação do colégio usando HTML, CSS e JavaScript. Veja os projetos
             que já desenvolvi!</p>
         <p>Minhas habilidades</p>
         <div>
